// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AllowFutureIdpSwitchLabelComponent should render the label when switch is active 1`] = `
<div>
  <span>
    Les futurs moyens de connexion dans FranceConnect
    <strong>
       seront 
      any-futureidp-allowed-mock
    </strong>
  </span>
</div>
`;

exports[`AllowFutureIdpSwitchLabelComponent should render the label when switch is inactive 1`] = `
<div>
  <span>
    Les futurs moyens de connexion dans FranceConnect
    <strong>
       seront 
      any-futureidp-disallowed-mock
    </strong>
  </span>
</div>
`;
